# mini-eval-harness

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: agent.yaml  gsm8k.yaml  mock.yaml  rag.yaml
data/: agent_tasks.jsonl  demo_qa.jsonl  gsm8k_test_50.jsonl  rag_qa.jsonl
docs/rag_demo/: device_policy.md  leave_policy.md  onboarding_policy.md  reimbursement_policy.md  security_policy.md
prompts/: agent_v1.txt  agent_v1.yaml  gsm8k_v1.txt  gsm8k_v1.yaml  qa_v1.txt  qa_v1.yaml  rag_qa_v1.txt  rag_qa_v1.yaml
src/mini_eval_harness/: __init__.py  __main__.py  cli.py  config.py  dataset_loader.py  model_adapter.py  prompt_builder.py  prompt_loader.py  report.py  result_logger.py  runner.py  scorer.py
src/mini_eval_harness/agent/: __init__.py  environment.py  prompt_builder.py  replay.py  runner.py  scorer.py  task_loader.py  trajectory.py
src/mini_eval_harness/rag/: __init__.py  chunker.py  dataset.py  document_loader.py  evaluator.py  pipeline.py  retriever.py
