[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-eval-harness"
version = "0.1.0"
description = "A tiny evaluation harness for learning benchmark engineering."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
hf = [
  "torch>=2.0",
  "transformers>=4.40",
]
ragas = [
  "openai>=1.0",
  "ragas>=0.3,<1.0",
]
dev = [
  "basedpyright>=1.32",
  "types-PyYAML>=6.0",
]

[project.scripts]
mini-eval-harness = "mini_eval_harness.runner:main"
mini-eval = "mini_eval_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src"]
exclude = ["results", "reports"]
extraPaths = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
